--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # example netlify.toml
 [build]
-  command = "gulp dist"
+  command = "gulp sass && gulp scripts && gulp dist"
   functions = "netlify/functions"
   publish = "dist"
 
